Add Vue to Phoenix interface app

--- a/apps/interface/web/templates/layout/app.html.eex
+++ b/apps/interface/web/templates/layout/app.html.eex
@@ -9,6 +9,7 @@
 
     <title>Hello Interface!</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
+    <link rel="stylesheet" href="<%= static_path(@conn, "/css/components.css") %>">
   </head>
 
   <body>
